NYSD9-79: Tabs Not Being Clicked on Mobile Fix

--- a/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-tabs/nysenate-tabs.scss
+++ b/web/themes/custom/nysenate_theme/src/patterns/components/nysenate-tabs/nysenate-tabs.scss
@@ -66,7 +66,7 @@
     }
 
 
-    &:first-child {
+    &.active {
       input {
         width: auto;
       }
